# cable-V1

./: CMakeLists.txt  cable.desktop  camera.cpp  camera.h  common.cpp  common.h  dataloader.cpp  dataloader.h  datasets.cpp  datasets.h  icon.rc  loss.cpp  loss.h  main.cpp  mainwindow.ui  mydatabase.cpp  mydatabase.h  mylabel.cpp  mylabel.h  mymainwindow.cpp  mymainwindow.h  mysplashscreen.cpp  mysplashscreen.h  networks.cpp  networks.hpp  preprocess.cpp  preprocess.h  testnet.cpp  testnet.h  trainer.cpp  trainer.h  transforms.cpp  transforms.hpp  ui_mainwindow.h
